--- a/bracelet-project/main/templates/home.html
+++ b/bracelet-project/main/templates/home.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>home</title>
-</head>
-<body>
-<h1>home</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}
+	Anticovid bracelet
+{% endblock %}
+
+{% block content %}
+
+{% endblock %}
