add basic person page

--- a/bracelet-project/main/templates/login.html
+++ b/bracelet-project/main/templates/login.html
@@ -16,14 +16,14 @@
 
 	<div class="container">
 		<br>
-		<h1 class="product_title text-center">
+		<h1 class="text-center">
 			Авторизация
 		</h1>
 		<div class="row">
 			<div class="text-center bg-light">
 				<div>
 					<br>
-					<h2 class="product_title">
+					<h2>
 						Только для зарегистрированных пользователей
 					</h2>
 					<form method="post">
