--- a/bracelet-project/main/templates/navbar.html
+++ b/bracelet-project/main/templates/navbar.html
@@ -6,7 +6,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="#">Пользователь</a>
+        <a class="nav-link" href="{% url 'account' %}">Пользователь</a>
         <a class="nav-link" href="{% url 'help' %}">Помощь</a>
         <a class="nav-link text-right" href="{% url 'signout' %}">Выйти</a>
       </div>
