--- a/bracelet-project/main/templates/navbar.html
+++ b/bracelet-project/main/templates/navbar.html
@@ -7,6 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-link" href="{% url 'account' %}">Пользователь</a>
+        <a class="nav-link" href="{% url 'contacts' %}">
+            {% if request.user.is_staff %}
+              Контакты сотрудников
+            {% else %}
+              Мои контакты
+            {% endif %}
+        </a>
         <a class="nav-link" href="{% url 'help' %}">Помощь</a>
         <a class="nav-link text-right" href="{% url 'signout' %}">Выйти</a>
       </div>
