--- a/bracelet-project/main/templates/navbar.html
+++ b/bracelet-project/main/templates/navbar.html
@@ -15,7 +15,7 @@
             {% endif %}
         </a>
         {% if request.user.is_staff %}
-              <a class="nav-link" href="">Заболевания</a>
+              <a class="nav-link" href="{% url 'illnes' %}">Заболевания</a>
         {% endif %}
         <a class="nav-link" href="{% url 'help' %}">Помощь</a>
         <a class="nav-link text-right" href="{% url 'signout' %}">Выйти</a>
