--- a/bracelet-project/main/templates/login.html
+++ b/bracelet-project/main/templates/login.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-	<div class="container">
+	<div class="container"  style="max-width: 600px">
 		<br>
 		<h1 class="text-center">
 			Авторизация
