--- a/bracelet-project/main/templates/base.html
+++ b/bracelet-project/main/templates/base.html
@@ -10,6 +10,42 @@
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <style type="text/css">
+      body {
+        background-color: #EAEAEA;
+      }
+
+      .text_title{
+          font-family: 'Open Sans Condensed', sans-serif;
+font-family: 'Roboto', sans-serif;
+          letter-spacing: 0.07em;
+          font-weight:  bold;
+
+      }
+      .regular_text{
+          font-family: 'Open Sans Condensed', sans-serif;
+font-family: 'Roboto', sans-serif;
+          font-size: 23px;
+          letter-spacing: 0.03em;
+      }
+      .date_text{
+        font-family: 'Open Sans', sans-serif;
+        font-size: 15px;
+        font-weight:  bold;
+      }
+      .navbar_text{
+          font-weight:  bolder;
+          text-transform: uppercase;
+          font-family: 'Open Sans Condensed', sans-serif;
+          font-size: 17px;
+      }
+    </style>
+
     <title>{% block title %} {% endblock %}</title>
   </head>
   <body>
