--- a/bracelet-project/main/templates/forbidden.html
+++ b/bracelet-project/main/templates/forbidden.html
@@ -6,6 +6,6 @@
 
 {% block content %}
 
-<h2>Вы не имеете доступ к этой странице</h2>
+<h2 class="regular_text">Вы не имеете доступ к этой странице</h2>
 
 {% endblock %}
