--- a/bracelet-project/main/templates/navbar.html
+++ b/bracelet-project/main/templates/navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+<nav class="navbar navbar-expand-sm sticky-top navbar-light" style="background-color: #EAEAEA;">
   <div class="container-fluid">
     <a class="navbar-brand" href="/"><span class="material-icons">home</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,8 +6,8 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link" href="{% url 'account' %}">Пользователь</a>
-        <a class="nav-link" href="{% url 'contacts' %}">
+        <a class="nav-link navbar_text" href="{% url 'account' %}">Пользователь</a>
+        <a class="nav-link navbar_text" href="{% url 'contacts' %}">
             {% if request.user.is_staff %}
               Контакты сотрудников
             {% else %}
@@ -15,10 +15,9 @@
             {% endif %}
         </a>
         {% if request.user.is_staff %}
-              <a class="nav-link" href="{% url 'illnes' %}">Заболевания</a>
+              <a class="nav-link navbar_text" href="{% url 'illnes' %}">Заболевания</a>
         {% endif %}
-        <a class="nav-link" href="{% url 'help' %}">Помощь</a>
-        <a class="nav-link text-right" href="{% url 'signout' %}">Выйти</a>
+        <a class="nav-link navbar_text" href="{% url 'signout' %}">Выйти</a>
       </div>
     </div>
   </div>
