--- a/bracelet-project/main/templates/successfull_password_change.html
+++ b/bracelet-project/main/templates/successfull_password_change.html
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block content %}
-	<h2>Ваш пароль был успешно сменен</h2>
+	<h2 class="regular_text">Ваш пароль был успешно сменен</h2>
 {% endblock %}
