--- a/bracelet-project/main/templates/navbar.html
+++ b/bracelet-project/main/templates/navbar.html
@@ -1,4 +1,10 @@
-<nav class="navbar navbar-expand-sm sticky-top navbar-light" style="background-color: #EAEAEA;">
+<nav class="navbar 
+        {% if request.user.is_staff %}
+              navbar-expand-md
+            {% else %}
+              navbar-expand-sm
+            {% endif %}
+sticky-top navbar-light" style="background-color: #EAEAEA;">
   <div class="container-fluid">
     <a class="navbar-brand" href="/"><span class="material-icons">home</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -17,7 +23,6 @@
         {% if request.user.is_staff %}
               <a class="nav-link navbar_text" href="{% url 'workers' %}">Сотрудники</a>
               <a class="nav-link navbar_text" href="{% url 'illnes' %}">Заболевания</a>
-              <a class="nav-link navbar_text" href="{% url 'illnes' %}"></a>
         {% endif %}
         <a class="nav-link navbar_text" href="{% url 'signout' %}">Выйти</a>
       </div>
