--- a/bracelet-project/main/templates/contacts.html
+++ b/bracelet-project/main/templates/contacts.html
@@ -19,6 +19,13 @@
 		{% endif %}
 	</h1>
 
+		{% if request.user.is_staff %}
+			{% if to_ill %}
+			<a class="btn btn-dark" href="{% url 'only_ill_contacts' %}">Контакты только с заболевшими</a>
+			{% else %}
+			<a class="btn btn-dark" href="{% url 'contacts' %}">Все контакты</a>
+			{% endif %}
+		{% endif %}
 <!-- 	<div class="form-check form-switch">
   <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault">
   <label class="form-check-label" for="flexSwitchCheckDefault">Default switch checkbox input</label>
