--- a/bracelet-project/main/templates/change_password.html
+++ b/bracelet-project/main/templates/change_password.html
@@ -1,71 +1,31 @@
+{% extends 'base.html' %}
+
 {% load crispy_forms_tags %}
 
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+{% block title %}
+  Change password
+{% endblock %}
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+{% block content %}
 
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-      <link rel="preconnect" href="https://fonts.gstatic.com">
-<link rel="preconnect" href="https://fonts.gstatic.com">
-<link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <style type="text/css">
-      body {
-        background-color: #EAEAEA;
-      }
+  <div class="container"  style="max-width: 600px">
+    <br>
+    <h1 class="text-center text_title">
+      Смена пароля
+    </h1>
+    <div class="row">
+      <div class="text-center">
+        <div>
+          <br>
+          <form method="post">
+            {% csrf_token %}
+            <p>{{ form | crispy }}</p>
+            <button type="submit" class="btn btn-dark">Сохранить</button>
+          </form>
 
-      .text_title{
-          font-family: 'Open Sans Condensed', sans-serif;
-font-family: 'Roboto', sans-serif;
-          letter-spacing: 0.07em;
-          font-weight:  bold;
+        </div>
+      </div>
+    </div>
+  </div>
 
-      }
-      .regular_text{
-          font-family: 'Open Sans Condensed', sans-serif;
-font-family: 'Roboto', sans-serif;
-          font-size: 23px;
-          letter-spacing: 0.03em;
-      }
-      .date_text{
-        font-family: 'Open Sans', sans-serif;
-        font-size: 15px;
-        font-weight:  bold;
-      }
-      .navbar_text{
-          font-weight:  bolder;
-          text-transform: uppercase;
-          font-family: 'Open Sans Condensed', sans-serif;
-          font-size: 17px;
-      }
-    </style>
-	<title>Login</title>
-</head>
-<body>
-
-	<div class="container"  style="max-width: 600px">
-		<br>
-		<h1 class="text-center text_title">
-			Смена пароля
-		</h1>
-		<div class="row">
-			<div class="text-center">
-				<div>
-					<br>
-					<form method="post">
-					  {% csrf_token %}
-					  <p>{{ form | crispy }}</p>
-					  <button type="submit" class="btn btn-dark">Сохранить</button>
-					</form>
-
-				</div>
-			</div>
-		</div>
-	</div>
-	    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
