--- a/bracelet-project/main/templates/take_file.html
+++ b/bracelet-project/main/templates/take_file.html
@@ -3,15 +3,17 @@
 {% load static %}
 
 {% block content %}
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    <input type="file" name="myfile">
-    <button type="submit">Upload</button>
-  </form>
+	<div class="container">
+	  <form method="post" enctype="multipart/form-data">
+	    {% csrf_token %}
+	    <input class="" type="file" name="myfile">
+	    <button class="btn btn-outline-secondary" type="submit">Upload</button>
+	  </form>
 
-  {% if uploaded_file_url %}
-    <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p>
-  {% endif %}
 
-  <p><a href="{% url 'home' %}">Return to home</a></p>
+	  {% if first_part %}
+	<!--     <p>File uploaded at: <a href="{{ uploaded_file_url }}">{{ uploaded_file_url }}</a></p> -->
+		<p>{{ first_part }}</p>
+	  {% endif %}
+  </div>
 {% endblock %}
