--- a/bracelet-project/main/templates/illnes.html
+++ b/bracelet-project/main/templates/illnes.html
@@ -11,14 +11,14 @@
 			{% for user in passibly_ill %}
 				{{user.email}},
 			{% endfor %}
-			?subject=Информация с антиковидного браслета&amp;body=Здравствуйте. Вы имели контакт с человеком, у которого был обнаружен коронавирус. Просим вас избегать людных мест и, по возможности, сдать тест на наличие вируса.">Отправить уведомление заболевшим</a></p>
+			?subject=Информация с антиковидного браслета&amp;body=Здравствуйте.">Отправить уведомление заболевшим</a></p>
 	{% endif %}
 	{% if not empty_passibly_ill %}
 		<p><a class="btn bg-dark text-light " href="mailto:
 			{% for user in passibly_ill %}
 				{{user.email}},
 			{% endfor %}
-			?subject=Информация с антиковидного браслета&amp;body=Здравствуйте. Вы имели контакт с человеком, у которого был обнаружен коронавирус. Просим вас избегать людных мест и, по возможности, сдать тест на наличие вируса.">Отправить уведомление возможно заболевшим</a></p>
+			?subject=Информация с антиковидного браслета&amp;body=Здравствуйте.">Отправить уведомление возможно заболевшим</a></p>
 	{% endif %}
 	<h1 class="text_title">Заболевшие сотрудники</h1>
 	<br>
