--- a/bracelet-project/main/templates/change_password.html
+++ b/bracelet-project/main/templates/change_password.html
@@ -22,7 +22,10 @@
             <p>{{ form | crispy }}</p>
             <button type="submit" class="btn btn-dark">Сохранить</button>
           </form>
-
+          {% if messege %}
+          <br>
+          <p class="fw-bold">{{ messege }}</p>
+          {% endif %}
         </div>
       </div>
     </div>
