--- a/bracelet-project/main/templates/workers.html
+++ b/bracelet-project/main/templates/workers.html
@@ -14,6 +14,12 @@
 	{% if empty %}
 		<h3>Сотрудники в базе данных отсутсвуют</h3>
 	{% else %}
+		<p><a class="btn bg-dark text-light " href="mailto:
+			{% for user in workers %}
+				{{user.email}},
+			{% endfor %}
+			?subject=Информация с антиковидного браслета&amp;body=Здравствуйте.">Отправить сообщение сотрудникам</a>
+			<br><br>
 		{% for user in workers %}
 				<p class="regular_text"><a class="link-dark" href="{% url 'info_about_person' user.id %}">{{ user.last_name }} {{ user.first_name }} : {{ user.username }}</a></p>
 		{% endfor %}
