--- a/bracelet-project/main/templates/contacts.html
+++ b/bracelet-project/main/templates/contacts.html
@@ -20,14 +20,14 @@
 	</h1>
 
 		{% if request.user.is_staff %}
-			<a class="btn btn-dark" href="{% url 'take_contacts' %}">Добавить контакты</a>
-			<a class="btn btn-dark" href="{% url 'delete_old_contacts' %}">Удалить старые контакты</a>
-			<a class="btn btn-dark" href="{% url 'contacts_download' %}">Скачать контакты</a>
+			<a class="btn btn-dark btn-sm" href="{% url 'take_contacts' %}">Добавить контакты</a>
+			<a class="btn btn-dark btn-sm" href="{% url 'delete_old_contacts' %}">Удалить старые контакты</a>
+			<a class="btn btn-dark btn-sm" href="{% url 'contacts_download' %}">Скачать контакты</a>
 			
 			{% if to_ill %}
-			<a class="btn btn-dark" href="{% url 'only_ill_contacts' %}">Контакты только с заболевшими</a>
+			<a class="btn btn-dark btn-sm" href="{% url 'only_ill_contacts' %}">Контакты только с заболевшими</a>
 			{% else %}
-			<a class="btn btn-dark" href="{% url 'contacts' %}">Все контакты</a>
+			<a class="btn btn-dark btn-sm" href="{% url 'contacts' %}">Все контакты</a>
 			{% endif %}
 		{% endif %}
 <!-- 	<div class="form-check form-switch">
